# blacklog

./: Cargo.toml  README.md
benches/: logger.rs  record.rs  strftime.rs
examples/: 1-hello.rs  3-config.rs  config.json  config.rs
src/: _wip.rs  factory.rs  handle.rs  lib.rs  logger.rs  meta.rs  record.rs  registry.rs  severity.rs  thread.rs
src/appender/: mod.rs  terminal.rs
src/filter/: mod.rs  null.rs
src/handle/: dev.rs  mod.rs  sync.rs
src/layout/: mod.rs
src/layout/pattern/: grammar.peg.rs  grammar.rs  mod.rs
src/logger/: actor.rs  filtered.rs  mod.rs  sync.rs
src/meta/: encode.rs  format.rs  func.rs  mod.rs
src/output/: file.rs  mod.rs  null.rs  term.rs  terminal.rs
tests/: logger.rs
