[package]
name = "blacklog"
version = "0.1.0"
authors = ["Evgeny Safronov <division494@gmail.com>"]

description = "Fast attribute-aware asynchronous logger, port from https://github.com/3Hren/blackhole."

repository = "https://github.com/3Hren/blacklog"

readme = "README.md"

keywords = ["blackhole", "blacklog", "log", "logger", "logging"]
license = "MIT"

[dependencies]
# Pattern Layout grammar parsing.
peg = "0.3"
# Reduces error enum creation boilerplate.
quick-error = "^1.1"
# Datetime formatting.
chrono = "0.2"

[features]
# Compile unit-benchmarks.
benchmark = []
