[package]
name = "blacklog"
version = "0.1.1"
authors = ["Evgeny Safronov <division494@gmail.com>"]

description = "Fast attribute-aware asynchronous logger, port from https://github.com/3Hren/blackhole"

repository = "https://github.com/3Hren/blacklog"

readme = "README.md"

keywords = ["blackhole", "blacklog", "log", "logger", "logging"]
license = "MIT"

[dependencies]
# Pattern Layout grammar parsing. When it's time to go stable, I'll drop this
# dependency and will generate grammar files manually instead, until a
# convenient parser library with meaningful error handling comes.
peg = "0.3"
# Datetime formatting.
chrono = "0.2"
# Configuration from generic source.
serde_json = "0.7"
# Integration with the Standard Logging Library.
log = "0.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
# Compile unit-benchmarks.
benchmark = []
